fixed overflow and alignment issue of activity section

--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -525,7 +525,6 @@ textarea {
 .comment_link {
     font-size: small;
     font-weight: initial;
-    color: grey;
     position: relative;
     top: 35px;
 }
